# clion-googletest-tutorial

./: README.md
matlab-2_clion/: .gitignore  CMakeLists.txt  matlab-2.cpp
matlab-2_clion/include/: matlab.hpp
matlab-2_clion/src/: matlab.cpp
matlab-2_clion/test/: test_vector.cpp
